--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       rel="stylesheet"
     />
     <!-- fontstyling -->
-    <title>Bajra Technologies</title>
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
-    <!-- Icon taken from https://bajratechnologies.com/ -->
+    <title>Factors affecting Life Expectancy</title>
+    <link rel="icon" href="" type="" />
   </head>
   <body>
     <header>
@@ -30,7 +29,6 @@
               <a href="./index.html"
                 ><img id="logo" src="./images/logo.png" alt=""
               /></a>
-              <!-- Logo taken from https://bajratechnologies.com/ -->
             </li>
             <li><a href="./jobs.html">Jobs</a></li>
             <li><a href="./apply.html">Apply</a></li>
@@ -40,86 +38,92 @@
         </section>
       </nav>
     </header>
-    <img src="./images/office.jpg" alt="Employees at Bajra" id="office" />
+
     <article>
-      <h1>
-        Bajra Technologies - Your Trusted Partner in Data Quality and
-        Cybersecurity
-      </h1>
+      <h1>Role of Vaccination in Enhancing Global Health</h1>
       <section>
-        <h2>About Us</h2>
-        <!-- <p> -->
-          <div class='tableauPlaceholder' id='viz1729392137712' style='position: relative'><noscript><a href='#'><img alt='Impact of Vaccination ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;VaccinationCoverageandHumanMortality&#47;ImpactofVaccination&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='VaccinationCoverageandHumanMortality&#47;ImpactofVaccination' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;VaccinationCoverageandHumanMortality&#47;ImpactofVaccination&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1729392137712');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1366px';vizElement.style.height='795px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1366px';vizElement.style.height='795px';} else { vizElement.style.width='100%';vizElement.style.height='1277px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-        <!-- </p> -->
-        <p>Our Beliefs</p>
-        <ul>
-          <li>
-            <strong>Client-Centric Approach:</strong> Our clients' unique
-            challenges are what drive us to deliver excellence at each step.
-            Each solution is tailored to match the diverse requirements and
-            challenge of each project.
-          </li>
-          <li>
-            <strong>Innovation at the Core:</strong> Our love for modern
-            technology and passion for expanding our skillset through continuous
-            research and development are what set us apart.
-          </li>
-          <li>
-            <strong>Proven Track Record:</strong> With 345+ solutions delivered
-            within a decade, we have earned the unwavering trust of our clients
-            and established ourselves as a reliable company.
-          </li>
-        </ul>
-        <h2>What We Do</h2>
-        <h3>Data Quality Solutions:</h3>
+        <div
+          class="tableauPlaceholder"
+          id="viz1729392137712"
+          style="position: relative"
+        >
+          <noscript
+            ><a href="#"
+              ><img
+                alt="Impact of Vaccination "
+                src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;VaccinationCoverageandHumanMortality&#47;ImpactofVaccination&#47;1_rss.png"
+                style="border: none" /></a></noscript
+          ><object class="tableauViz" style="display: none">
+            <param
+              name="host_url"
+              value="https%3A%2F%2Fpublic.tableau.com%2F"
+            />
+            <param name="embed_code_version" value="3" />
+            <param name="site_root" value="" />
+            <param
+              name="name"
+              value="VaccinationCoverageandHumanMortality&#47;ImpactofVaccination"
+            />
+            <param name="tabs" value="no" />
+            <param name="toolbar" value="yes" />
+            <param
+              name="static_image"
+              value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;VaccinationCoverageandHumanMortality&#47;ImpactofVaccination&#47;1.png"
+            />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="en-US" />
+            <param name="filter" value="publish=yes" />
+          </object>
+        </div>
+        <script type="text/javascript">
+          var divElement = document.getElementById("viz1729392137712");
+          var vizElement = divElement.getElementsByTagName("object")[0];
+          if (divElement.offsetWidth > 800) {
+            vizElement.style.width = "1366px";
+            vizElement.style.height = "795px";
+          } else if (divElement.offsetWidth > 500) {
+            vizElement.style.width = "1366px";
+            vizElement.style.height = "795px";
+          } else {
+            vizElement.style.width = "100%";
+            vizElement.style.height = "1277px";
+          }
+          var scriptElement = document.createElement("script");
+          scriptElement.src =
+            "https://public.tableau.com/javascripts/api/viz_v1.js";
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
         <p>
-          <strong>Precision Data Management: </strong>
-          Bajra provides an end-to-end data management platform covering the
-          aspects of data inegration, data warehousing, data quality and data
-          governance.
+          <small
+            >Data taken from
+            <a
+              href="https://www.kaggle.com/datasets/lashagoch/life-expectancy-who-updated/data"
+              >Life Expectancy (WHO) Fixed</a
+            >
+            and
+            <a href="https://databank.worldbank.org/GNI-per-capita/id/ee3f00e0"
+              >World Bank's Data Bank</a
+            ></small
+          >
         </p>
+
         <p>
-          <strong> Data Governance:</strong>The governance strategies designed
-          by our team of professionals ensure data integrity and mitigate the
-          risks posed by data breaches and privacy violations.
+          Immunisation against fatal diseases like Measles, Polio, Diptheria and
+          Hepatitis B plays a significant role in minimising premature deaths
+          and enhancing life expectancy. The contribution of preventative
+          healthcare for achieving positive health outcomes can be inferred from
+          the visualisations presented above.
         </p>
-        <p>
-          <strong>Data Analytics</strong>
-          Our data analytics team are some of the best in the industry with
-          comprehensive skillset and decades of experience.
-        </p>
-        <h3>Cybersecurity Services:</h3>
-        <p>
-          <strong>Threat Identification and Management: </strong>We employ
-          threat intelligence services so that new threats can be detected and
-          neutralized before your business is affected.
-        </p>
-        <p>
-          <strong>Data Encryption:</strong> We employ state-of-the-art
-          encryption technologies to ensure the safety and integrity of your
-          data.
-        </p>
-        <p>
-          <strong>24/7 Cybersecurity Monitoring:</strong>
-          Rest assured, our 24/7 cybersecurity monitoring services ensure the
-          protection of your digital assets.
-        </p>
-        <p class="references">
-          References taken from
-          <a href="https://www.talend.com/about-us/"
-            >Company Reference 1</a
-          >,<a href="https://www.informatics.com.au/">Company Reference 2</a>,
-          <a href="https://bajratechnologies.com/">Company Reference 3</a>,
-          <a href="https://cryptogennepal.com/">Company Reference 4</a>,
-          <br />
-          Image taken from <a href="https://unsplash.com/photos/QBpZGqEMsKg">Office</a>
-          </p>
       </section>
     </article>
     <footer>
       <section>
         <p>
-          Reach out to us on:
+          Reach out:
           <a href="mailto:104853758@student.swin.edu.au"
             ><img
               src="./images/mail.png"
@@ -144,7 +148,7 @@
           /></a>
         </p>
         <p id="copyright">
-          &#x24B8; Copyright 2023
+          &#x24B8; Copyright 2024
           <span><a href="index.html">Bajra Technologies</a></span> | All Rights
           Reserved.
         </p>
