--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       rel="stylesheet"
     />
     <!-- fontstyling -->
-    <title>Factors affecting Life Expectancy</title>
-    <link rel="icon" href="" type="" />
+    <title>Factors affecting Life Expectancy and Mortality Rates</title>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -27,132 +27,275 @@
           <ul>
             <li>
               <a href="./index.html"
-                ><img id="logo" src="./images/logo.png" alt=""
-              /></a>
+                ><img id="logo" src="" alt="" />Factors affecting Life
+                Expectancy and Mortality Rates</a
+              >
             </li>
-            <li><a href="./jobs.html">Jobs</a></li>
-            <li><a href="./apply.html">Apply</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./enhancements.html">Enhancements</a></li>
           </ul>
         </section>
       </nav>
     </header>
 
     <article>
-      <h1>Role of Vaccination in Enhancing Global Health</h1>
-      <section>
-        <div
-          class="tableauPlaceholder"
-          id="viz1729392137712"
-          style="position: relative"
+      <p>
+        This webpage contains visualisations depicting the impact of various
+        socio-economic and health factors on life expectancy and mortality
+        rates.
+      </p>
+      <p>
+        For the visualisations, the
+        <a
+          href="https://www.kaggle.com/datasets/lashagoch/life-expectancy-who-updated/data"
+          >Life Expectancy (WHO) Fixed</a
+        >dataset retrieved from Kaggle and the
+        <a href="https://databank.worldbank.org/GNI-per-capita/id/ee3f00e0"
+          >GNI data of countries from 2000 to 2015</a
         >
-          <noscript
-            ><a href="#"
-              ><img
-                alt="Impact of Vaccination "
-                src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;VaccinationCoverageandHumanMortality&#47;ImpactofVaccination&#47;1_rss.png"
-                style="border: none" /></a></noscript
-          ><object class="tableauViz" style="display: none">
-            <param
-              name="host_url"
-              value="https%3A%2F%2Fpublic.tableau.com%2F"
-            />
-            <param name="embed_code_version" value="3" />
-            <param name="site_root" value="" />
-            <param
-              name="name"
-              value="VaccinationCoverageandHumanMortality&#47;ImpactofVaccination"
-            />
-            <param name="tabs" value="no" />
-            <param name="toolbar" value="yes" />
-            <param
-              name="static_image"
-              value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;VaccinationCoverageandHumanMortality&#47;ImpactofVaccination&#47;1.png"
-            />
-            <param name="animate_transition" value="yes" />
-            <param name="display_static_image" value="yes" />
-            <param name="display_spinner" value="yes" />
-            <param name="display_overlay" value="yes" />
-            <param name="display_count" value="yes" />
-            <param name="language" value="en-US" />
-            <param name="filter" value="publish=yes" />
-          </object>
-        </div>
-        <script type="text/javascript">
-          var divElement = document.getElementById("viz1729392137712");
-          var vizElement = divElement.getElementsByTagName("object")[0];
-          if (divElement.offsetWidth > 800) {
-            vizElement.style.width = "1366px";
-            vizElement.style.height = "795px";
-          } else if (divElement.offsetWidth > 500) {
-            vizElement.style.width = "1366px";
-            vizElement.style.height = "795px";
-          } else {
-            vizElement.style.width = "100%";
-            vizElement.style.height = "1277px";
-          }
-          var scriptElement = document.createElement("script");
-          scriptElement.src =
-            "https://public.tableau.com/javascripts/api/viz_v1.js";
-          vizElement.parentNode.insertBefore(scriptElement, vizElement);
-        </script>
-        <p>
-          <small
-            >Data taken from
-            <a
-              href="https://www.kaggle.com/datasets/lashagoch/life-expectancy-who-updated/data"
-              >Life Expectancy (WHO) Fixed</a
-            >
-            and
-            <a href="https://databank.worldbank.org/GNI-per-capita/id/ee3f00e0"
-              >World Bank's Data Bank</a
-            ></small
+        obtained from World Bank's Data Bank were used.
+      </p>
+      <details>
+        <summary>
+          <strong>Correlation between Income Levels and Life Expectancy</strong>
+        </summary>
+        <section>
+          <div
+            class="tableauPlaceholder"
+            id="viz1729412209919"
+            style="position: relative"
           >
-        </p>
+            <noscript
+              ><a href="#"
+                ><img
+                  alt="Correlation between Income Levels and Life Expectancy "
+                  src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CorrelationbetweenIncomeLevelsandLifeExpectancy&#47;CorrelationbetweenIncomeLevelsandLifeExpectancy&#47;1_rss.png"
+                  style="border: none" /></a></noscript
+            ><object class="tableauViz" style="display: none">
+              <param
+                name="host_url"
+                value="https%3A%2F%2Fpublic.tableau.com%2F"
+              />
+              <param name="embed_code_version" value="3" />
+              <param
+                name="path"
+                value="views&#47;CorrelationbetweenIncomeLevelsandLifeExpectancy&#47;CorrelationbetweenIncomeLevelsandLifeExpectancy?:language=en-US&amp;:embed=true&amp;:sid=&amp;:redirect=auth"
+              />
+              <param name="toolbar" value="yes" />
+              <param
+                name="static_image"
+                value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CorrelationbetweenIncomeLevelsandLifeExpectancy&#47;CorrelationbetweenIncomeLevelsandLifeExpectancy&#47;1.png"
+              />
+              <param name="animate_transition" value="yes" />
+              <param name="display_static_image" value="yes" />
+              <param name="display_spinner" value="yes" />
+              <param name="display_overlay" value="yes" />
+              <param name="display_count" value="yes" />
+              <param name="language" value="en-US" />
+            </object>
+          </div>
+          <script type="text/javascript">
+            var divElement = document.getElementById("viz1729412209919");
+            var vizElement = divElement.getElementsByTagName("object")[0];
+            if (divElement.offsetWidth > 800) {
+              vizElement.style.width = "1366px";
+              vizElement.style.height = "795px";
+            } else if (divElement.offsetWidth > 500) {
+              vizElement.style.width = "1366px";
+              vizElement.style.height = "795px";
+            } else {
+              vizElement.style.width = "100%";
+              vizElement.style.height = "1177px";
+            }
+            var scriptElement = document.createElement("script");
+            scriptElement.src =
+              "https://public.tableau.com/javascripts/api/viz_v1.js";
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+          </script>
+          <p>
+            <small
+              >Data taken from
+              <a
+                href="https://www.kaggle.com/datasets/lashagoch/life-expectancy-who-updated/data"
+                >Life Expectancy (WHO) Fixed</a
+              >
+              and
+              <a
+                href="https://databank.worldbank.org/GNI-per-capita/id/ee3f00e0"
+                >World Bank's Data Bank</a
+              ></small
+            >
+          </p>
 
-        <p>
-          Immunisation against fatal diseases like Measles, Polio, Diptheria and
-          Hepatitis B plays a significant role in minimising premature deaths
-          and enhancing life expectancy. The contribution of preventative
-          healthcare for achieving positive health outcomes can be inferred from
-          the visualisations presented above.
-        </p>
-      </section>
+          <p>
+            The above visualisations depict the strong relationship between the
+            economic status of a country or region and the life expectancy of the
+            population residing within that particular country or region.
+          </p>
+        </section>
+      </details>
+      <details>
+        <summary>
+          <strong
+            >Impact of Schooling on Life Expectancy and Human Mortality</strong
+          >
+        </summary>
+        <section>
+          <div
+            class="tableauPlaceholder"
+            id="viz1729412461645"
+            style="position: relative"
+          >
+            <noscript
+              ><a href="#"
+                ><img
+                  alt="Impact of Schooling on Life Expectancy "
+                  src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;YH&#47;YHXJYXZ5H&#47;1_rss.png"
+                  style="border: none" /></a></noscript
+            ><object class="tableauViz" style="display: none">
+              <param
+                name="host_url"
+                value="https%3A%2F%2Fpublic.tableau.com%2F"
+              />
+              <param name="embed_code_version" value="3" />
+              <param name="path" value="shared&#47;YHXJYXZ5H" />
+              <param name="toolbar" value="yes" />
+              <param
+                name="static_image"
+                value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;YH&#47;YHXJYXZ5H&#47;1.png"
+              />
+              <param name="animate_transition" value="yes" />
+              <param name="display_static_image" value="yes" />
+              <param name="display_spinner" value="yes" />
+              <param name="display_overlay" value="yes" />
+              <param name="display_count" value="yes" />
+              <param name="language" value="en-US" />
+            </object>
+          </div>
+          <script type="text/javascript">
+            var divElement = document.getElementById("viz1729412461645");
+            var vizElement = divElement.getElementsByTagName("object")[0];
+            if (divElement.offsetWidth > 800) {
+              vizElement.style.width = "1366px";
+              vizElement.style.height = "795px";
+            } else if (divElement.offsetWidth > 500) {
+              vizElement.style.width = "1366px";
+              vizElement.style.height = "795px";
+            } else {
+              vizElement.style.width = "100%";
+              vizElement.style.height = "1277px";
+            }
+            var scriptElement = document.createElement("script");
+            scriptElement.src =
+              "https://public.tableau.com/javascripts/api/viz_v1.js";
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+          </script>
+          <p>
+            <small
+              >Data taken from
+              <a
+                href="https://www.kaggle.com/datasets/lashagoch/life-expectancy-who-updated/data"
+                >Life Expectancy (WHO) Fixed</a
+              >
+              and
+              <a
+                href="https://databank.worldbank.org/GNI-per-capita/id/ee3f00e0"
+                >World Bank's Data Bank</a
+              ></small
+            >
+          </p>
+
+          <p>
+            Through the attainment of formal education, a nation's population
+            becomes more aware of hygiene, preventative healthcare and the
+            importance of maintaining a healthy lifestyle. The visualisations
+            showcased above illustrate the impact of schooling on life expectancy
+            and mortality rates.
+          </p>
+        </section>
+      </details>
+      <details>
+        <summary>
+          <strong>Role of Vaccination in Enhancing Global Health</strong>
+        </summary>
+        <section>
+          <div
+            class="tableauPlaceholder"
+            id="viz1729412665551"
+            style="position: relative"
+          >
+            <noscript
+              ><a href="#"
+                ><img
+                  alt="Role of Vaccination in Enhancing Global Health Outcomes "
+                  src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;RoleofVaccinationinEnhancingGlobalHealthOutcomes&#47;RoleofVaccinationinEnhancingGlobalHealthOutcomes&#47;1_rss.png"
+                  style="border: none" /></a></noscript
+            ><object class="tableauViz" style="display: none">
+              <param
+                name="host_url"
+                value="https%3A%2F%2Fpublic.tableau.com%2F"
+              />
+              <param name="embed_code_version" value="3" />
+              <param name="site_root" value="" />
+              <param
+                name="name"
+                value="RoleofVaccinationinEnhancingGlobalHealthOutcomes&#47;RoleofVaccinationinEnhancingGlobalHealthOutcomes"
+              />
+              <param name="tabs" value="no" />
+              <param name="toolbar" value="yes" />
+              <param
+                name="static_image"
+                value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;RoleofVaccinationinEnhancingGlobalHealthOutcomes&#47;RoleofVaccinationinEnhancingGlobalHealthOutcomes&#47;1.png"
+              />
+              <param name="animate_transition" value="yes" />
+              <param name="display_static_image" value="yes" />
+              <param name="display_spinner" value="yes" />
+              <param name="display_overlay" value="yes" />
+              <param name="display_count" value="yes" />
+              <param name="language" value="en-US" />
+              <param name="filter" value="publish=yes" />
+            </object>
+          </div>
+          <script type="text/javascript">
+            var divElement = document.getElementById("viz1729412665551");
+            var vizElement = divElement.getElementsByTagName("object")[0];
+            if (divElement.offsetWidth > 800) {
+              vizElement.style.width = "1366px";
+              vizElement.style.height = "795px";
+            } else if (divElement.offsetWidth > 500) {
+              vizElement.style.width = "1366px";
+              vizElement.style.height = "795px";
+            } else {
+              vizElement.style.width = "100%";
+              vizElement.style.height = "1327px";
+            }
+            var scriptElement = document.createElement("script");
+            scriptElement.src =
+              "https://public.tableau.com/javascripts/api/viz_v1.js";
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+          </script>
+          <p>
+            <small
+              >Data taken from
+              <a
+                href="https://www.kaggle.com/datasets/lashagoch/life-expectancy-who-updated/data"
+                >Life Expectancy (WHO) Fixed</a
+              >
+              and
+              <a
+                href="https://databank.worldbank.org/GNI-per-capita/id/ee3f00e0"
+                >World Bank's Data Bank</a
+              ></small
+            >
+          </p>
+
+          <p>
+            Immunisation against fatal diseases like measles, polio, diptheria
+            and hepatitis B plays a significant role in minimising premature
+            deaths and enhancing life expectancy. The contribution of
+            preventative healthcare in achieving positive health outcomes can be
+            inferred from the visualisations presented above.
+          </p>
+        </section>
+      </details>
     </article>
-    <footer>
-      <section>
-        <p>
-          Reach out:
-          <a href="mailto:104853758@student.swin.edu.au"
-            ><img
-              src="./images/mail.png"
-              alt="Mail Icon"
-              class="socials"
-              id="mail"
-          /></a>
-          <a href=""
-            ><img
-              src="./images/linkedin.png"
-              alt="LinkedIn Icon"
-              class="socials"
-          /></a>
-          <a href=""
-            ><img src="./images/twitter.png" alt="Twitter Icon" class="socials"
-          /></a>
-          <a href=""
-            ><img
-              src="./images/facebook.png"
-              alt="Facebook Icon"
-              class="socials"
-          /></a>
-        </p>
-        <p id="copyright">
-          &#x24B8; Copyright 2024
-          <span><a href="index.html">Bajra Technologies</a></span> | All Rights
-          Reserved.
-        </p>
-      </section>
-    </footer>
   </body>
 </html>
