--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <a
           href="https://www.kaggle.com/datasets/lashagoch/life-expectancy-who-updated/data"
           >Life Expectancy (WHO) Fixed</a
-        >dataset retrieved from Kaggle and the
+        >
+        dataset retrieved from Kaggle and the
         <a href="https://databank.worldbank.org/GNI-per-capita/id/ee3f00e0"
           >GNI data of countries from 2000 to 2015</a
         >
@@ -126,9 +127,9 @@
           </p>
 
           <p>
-            The above visualisations depict the strong relationship between the
-            economic status of a country or region and the life expectancy of the
-            population residing within that particular country or region.
+            The above visualisations depict a strong relationship between the
+            economic status of a country or region and the life expectancy of
+            the population residing within that particular country or region.
           </p>
         </section>
       </details>
@@ -207,14 +208,16 @@
             Through the attainment of formal education, a nation's population
             becomes more aware of hygiene, preventative healthcare and the
             importance of maintaining a healthy lifestyle. The visualisations
-            showcased above illustrate the impact of schooling on life expectancy
-            and mortality rates.
+            showcased above illustrate the impact of schooling on life
+            expectancy and mortality rates.
           </p>
         </section>
       </details>
       <details>
         <summary>
-          <strong>Role of Vaccination in Enhancing Global Health</strong>
+          <strong
+            >Role of Vaccination in Enhancing Global Health Outcomes</strong
+          >
         </summary>
         <section>
           <div
